prometheus/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
  labels:
    app: prometheus-service
spec:
  ports:
    - port: 80
      targetPort: 9090
  selector:
    app: prometheus
  type: ClusterIP
